removed team counter from bank and updated test values for integration tests #major
