# config/openapi/spec/schemas/bank.json
@@ -15,8 +15,7 @@
           "jmsQueue",
           "thumbnailUrl",
           "isAsync",
-          "isActive",
-          "teamsCount"
+          "isActive"
         ],
         "properties": {
           "uuid": {
@@ -47,11 +46,6 @@
           },
           "creditConfiguration": {
             "$ref": "#/components/schemas/CreditConfiguration"
-          },
-          "teamsCount": {
-            "type": "integer",
-            "format": "int64",
-            "minimum": 0
           }
         }
       },
@@ -111,8 +105,7 @@
             "thumbnailUrl": "https://www.kskgg.de/content/myif/ksk-gross-gerau/work/filiale/de/home/service/schufa-bonitaetscheck/_jcr_content/par/section/section/imagebox1/image.img.jpg/1597729904274.jpg",
             "isAsync": false,
             "isActive": true,
-            "creditConfiguration": null,
-            "teamsCount": 100000
+            "creditConfiguration": null
           },
           {
             "uuid": "bf6981d4-0413-4767-8232-c7179b169bc7",
@@ -128,8 +121,7 @@
               "maxTermInMonths": 36,
               "minSchufaRating": "A",
               "maxSchufaRating": "P"
-            },
-            "teamsCount": 100000
+            }
           },
           {
             "uuid": "78eefcd4-2459-412e-857f-60f7c5d531c9",
@@ -145,8 +137,7 @@
               "maxTermInMonths": 36,
               "minSchufaRating": "A",
               "maxSchufaRating": "P"
-            },
-            "teamsCount": 100000
+            }
           }
         ]
       },
@@ -158,8 +149,7 @@
           "thumbnailUrl": "https://www.kskgg.de/content/myif/ksk-gross-gerau/work/filiale/de/home/service/schufa-bonitaetscheck/_jcr_content/par/section/section/imagebox1/image.img.jpg/1597729904274.jpg",
           "isAsync": false,
           "isActive": true,
-          "creditConfiguration": null,
-          "teamsCount": 100000
+          "creditConfiguration": null
         }
       },
       "SyncBank": {
@@ -177,8 +167,7 @@
             "maxTermInMonths": 36,
             "minSchufaRating": "A",
             "maxSchufaRating": "P"
-          },
-          "teamsCount": 100000
+          }
         }
       },
       "AsyncBank": {
@@ -196,8 +185,7 @@
             "maxTermInMonths": 36,
             "minSchufaRating": "A",
             "maxSchufaRating": "P"
-          },
-          "teamsCount": 100000
+          }
         }
       }
     }
